[Lesson 1] MealsUtil refactoring